fix: fix padding text

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 
   <section class="features">
   <div class="features-wrapper">
-    <div class="features-item"><img src="assets/Shape 2.png" alt="">
+    <div class="features-item"><img src="assets/shape2.png" alt="">
       <p>better design</p>
     </div>
-    <div class="features-item"><img src="assets/Shape 3.png" alt="">
+    <div class="features-item"><img src="assets/shape3.png" alt="">
       <p>customise</p>
     </div>
-    <div class="features-item"><img src="assets/Shape 4.png" alt="">
+    <div class="features-item"><img src="assets/shape4.png" alt="">
       <p>Its Free</p>
     </div>
   </div>
