refactor: add style in second block

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="header-container">
     <header class="header">
       <div class="logo">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="83" height="83"
@@ -81,22 +81,25 @@
   </div>
   </section>
 
-  <div class="news_container">
-    <h2>Lorem ipsum dolor sit amet</h2>
-    <div class="news">
-      <div class="news_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed d</div>
-      <div class="media_news"><video src="https://www.youtube.com/watch?v=RaQp6oM-8_8" poster="assets/poster2.jpg"
+<div class="news-container">
+  <section class="news">
+    <h2 class="heading-2">Lorem ipsum dolor sit amet</h2>
+  <div class="news-wrapper">
+    <div class="news-item">
+      <div class="news-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-<br>didunt ut</div>
+      <div class="media-news"><video src="https://www.youtube.com/watch?v=RaQp6oM-8_8" poster="assets/poster2.jpg"
           controls></video></div>
+      <div class="date">
+            <p class="date_day">25</p>
+            <p class="date_month">april</p>
+      </div>
     </div>
-    <div class="news">
-      <div class="news_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed d</div>
-      <div class="news_video"></div>
-    </div>
-    <div class="date">
-      <p class="date_day">25</p>
-      <p class="date_month">april</p>
+    <div class="news-item-twitter">
+      <div class="twitter"><img src="assets/twitter.png" alt="twitter"></div>
     </div>
   </div>
+  </section>
+</div>
 
   <div class="benefit_container">
     <div class="pic">
