refactor: add style in second section on site

--- a/index.html
+++ b/index.html
@@ -86,19 +86,27 @@
     <h2 class="heading-2">Lorem ipsum dolor sit amet</h2>
   <div class="news-wrapper">
     <div class="news-item">
-      <div class="news-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-<br>didunt ut</div>
-      <div class="media-news"><video src="https://www.youtube.com/watch?v=RaQp6oM-8_8" poster="assets/poster2.jpg"
-          controls></video></div>
+      <div class="news-content"><p class="news-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci-<br>didunt ut</p>
+        <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11" class="plus-1">
+        <path class="cls-1" d="M466,1104h-4v4h-3v-4h-4v-3h4v-4h3v4h4v3Z" transform="translate(-455 -1097)" />
+      </svg></div>
+      
+      <div class="media-news"><video src="https://www.youtube.com/watch?v=RaQp6oM-8_8" poster="assets/poster2.jpg" class="video-news"></video></div>
       <div class="date">
             <p class="date_day">25</p>
             <p class="date_month">april</p>
       </div>
     </div>
     <div class="news-item-twitter">
-      <div class="twitter"><img src="assets/twitter.png" alt="twitter"></div>
+      <div class="twitter"><p class="date-second">22</p><svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11" class="plus-2">
+        <path class="cls-1" d="M466,1104h-4v4h-3v-4h-4v-3h4v-4h3v4h4v3Z" transform="translate(-455 -1097)" />
+      </svg></div>
     </div>
   </div>
+<div class="range"><input type="range" min="0" max="895" step="1" value="317"></div>
+
   </section>
+
 </div>
 
   <div class="benefit_container">
