--- a/index.html
+++ b/index.html
@@ -94,11 +94,16 @@
       <div class="news-wrapper">
         <div class="news-item">
           <div class="news-content">
-            <p class="news-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-              inci-<br>didunt ut</p>
+              <p class="news-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                inci-<br>didunt ut</p>
+                <p class="news-text-640">Lorem ipsum dolor sit amet, consecte-<br>tur adipisicing elit, sed do eiusmod tempor
+              incididunt ut</p>
             <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11" class="plus-1">
               <path class="cls-1" d="M466,1104h-4v4h-3v-4h-4v-3h4v-4h3v4h4v3Z" transform="translate(-455 -1097)" />
             </svg>
+          </div>
+          <div class="space">
+
           </div>
 
           <div class="media-news"><video src="https://www.youtube.com/watch?v=RaQp6oM-8_8" poster="assets/poster2.jpg"
