refactor: add style in mobile version

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <div class="video-conrtainer-640">
           <video src="https://www.youtube.com/watch?v=RaQp6oM-8_8" poster="assets/poster-640.jpg" class="video-slider"></video>
         </div>
+        
 
         <div class="title-slider">
           <p class="slider-title"><span class="slider-title-main">The cool</span></br>The minimal</p>
@@ -71,6 +72,7 @@
                 transform="translate(-1279 -318)" />
             </svg></a></li>
       </ul>
+      <div class="shadow"></div>
     </section>
   </div>
 
@@ -124,7 +126,7 @@
           </div>
             <div class="twitter-chat">
               <div class="twit-new">
-                <p class="tweet-message">Daily Mobile UI Design Inspiration #1<br>via @cssauthor</p>
+                <p class="tweet-message-new">Daily Mobile UI Design Inspiration #1<br>via @cssauthor</p>
               </div>
               <div class="twit-old">
                 <p class="tweet-message">Daily Mobile UI Design Inspiration #1<br>via @cssauthor</p>
