refactor: add styles in mobile version

--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@
                 <p class="tweet-message">Daily Mobile UI Design Inspiration #1<br>via @cssauthor</p>
               </div>
               <div class="twit-post">
-                <input type="text" class="tweet-area">
+                <form action="#">
+                  <input type="tweet">
+                  <button type="submit">Tweet</button>
+                </form>
               </div>
             </div>
         
